@@ -251,3 +251,4 @@ Fixes:
     * Evas: If an object goes to be hidden without replacing the cur/prev state info, the object context can be corrupted at the next show time. Now it replaces the cur/prev in that rare case.
     * Evas: Fix evas gl_x11 in 16bpp and lower depths than 24/32 bpp.
     * Edje: Fix useless ecore_imf_context_reset call in case of pressing ESC and Return key
+    * Edje: When selected word exists, selection is cleared and cursor remains on the current entry by additional key input.
